components/ra/approved-experiments/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: approved-experiments
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        co.elastic.logs/processors.add_fields.target: ""
        co.elastic.logs/processors.add_fields.fields.application.name: "approved-experiments"
        co.elastic.logs/processors.add_fields.fields.application.domain: "approved-experiments"
        co.elastic.logs/processors.add_fields.fields.application.tier: "service"
        co.elastic.logs/processors.add_fields.fields.application.language: "javascript"

    spec:
      containers:
        - name: approved-experiments
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: common-views
              mountPath: "/app/build/common-views"
              readOnly: true
            - name: common-public
              mountPath: "/app/build/common-public"
              readOnly: true
            - name: approved-experiments-filters
              mountPath: /app/filters.json
              subPath: filters.json
          readinessProbe:
            httpGet:
              path: /approved-experiments/health/ready
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
      imagePullSecrets:
        - name: registry-creds
      volumes:
        - name: common-views
          configMap:
            name: common-pug-views-2026
        - name: common-public
          configMap:
            name: common-pug-public-2026
        - name: approved-experiments-filters
          configMap:
            name: approved-experiments-filters
