components/ra/approved-experiments/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: approved-experiments
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
