components/ra/approved-experiments/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: approved-experiments
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.facilities.rl.ac.uk"
      secretName: facilities-tls-certificate
    - hosts:
        - "*.developers.facilities.rl.ac.uk"
      secretName: developers-tls-certificate
  rules:
    - host: "*.developers.facilities.rl.ac.uk"
      http: &http_rules
        paths:
          - path: /approved-experiments
            pathType: Prefix
            backend:
              service:
                name: approved-experiments
                port:
                  number: 3000
    - host: "*.facilities.rl.ac.uk"
      http: *http_rules
